--- a/index.css
+++ b/index.css
@@ -1,20 +1,80 @@
-
+/* Header */
 .header {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo img {
-    width: 100px;
+  width: 100px;
 }
 
-.nav-link ul{
-    display: flex;
-    margin: 0;
-    list-style-type: none;
+.nav-link ul {
+  display: flex;
+  margin: 0;
+  list-style-type: none;
+  align-items: center;
 }
 
-.nav-link ul li{
-    padding: 10px;
-    margin: 10px;
+.nav-link ul li {
+  padding: 10px;
+  margin: 10px;
+}
+
+/* Body */
+.res-container {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.res-container .res-card {
+  width: 21%;
+  background-color: #f7f7f7;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 10px;
+  margin: 20px 10px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.res-container .res-card:hover {
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.res-container .res-card img {
+  width: 100%;
+  height: 291px;
+}
+
+.top-rated-cta {
+  margin: 20px 20px 0;
+  padding: 10px;
+  background: linear-gradient(45deg, #f16767, transparent);
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.load-data {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.header-btn {
+  width: 100px;
+  height: 30px;
+  background-color: aqua;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.filters {
+  display: flex;
+  align-items: center;
 }
