--- a/index.css
+++ b/index.css
@@ -19,6 +19,14 @@
   padding: 10px;
   margin: 10px;
 }
+.nav-link ul li:hover {
+  color: #f16767;
+}
+
+.nav-link ul li a {
+  text-decoration: none;
+  color: inherit;
+}
 
 /* Body */
 .res-container {
@@ -29,8 +37,14 @@
   justify-content: center;
 }
 
+.res-container a {
+  display: flex;
+  text-decoration: none;
+  color: inherit;
+}
+
 .res-container .res-card {
-  width: 21%;
+  width: 100%;
   background-color: #f7f7f7;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -45,12 +59,18 @@
 }
 
 .res-container .res-card img {
-  width: 100%;
+  width: 246px;
   height: 291px;
 }
 
+.res-container .res-card h4 {
+  white-space: nowrap;
+  width: 230px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .top-rated-cta {
-  margin: 20px 20px 0;
   padding: 10px;
   background: linear-gradient(45deg, #f16767, transparent);
   border: 1px solid #ccc;
@@ -77,4 +97,18 @@
 .filters {
   display: flex;
   align-items: center;
+  justify-content: center;
+  margin: 30px 0 10px;
+}
+
+.search-btn-wrapper {
+  display: flex;
+  margin-right: 30px;
+}
+.search-btn-wrapper input {
+  height: 30px;
+}
+.search-btn-wrapper button {
+  background: linear-gradient(45deg, #f16767, #0000);
+  border: 1px solid #ccc;
 }
