--- a/index.css
+++ b/index.css
@@ -112,3 +112,23 @@
   background: linear-gradient(45deg, #f16767, #0000);
   border: 1px solid #ccc;
 }
+
+.green {
+  background-color: green;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  border-radius: 50%;
+  position: relative;
+  top: 5px;
+}
+
+.red {
+  background-color: red;
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  border-radius: 50%;
+  position: relative;
+  top: 5px;
+}
